# POSAS

./: .gitignore  EXECUTION_SUMMARY.md  QUICKSTART_ES.md  README.md  RESULTADOS_EJECUCION.md  pyproject.toml  requirements.txt  run_project.sh
config/: config.yaml
data/processed/: datos_para_cnn_etiquetas - datos_para_cnn.csv.csv
data/processed/heat_maps/: mapa_calor.npy  mapa_calor040_lunin.npy  mapa_calor100_tenas.npy  mapa_calor101_sommer.npy  mapa_calor102_mkhi.npy  mapa_calor103_lautaro.npy  mapa_calor104_barella.npy  mapa_calor105_mthuram.npy  mapa_calor106_chala.npy  mapa_calor107_darmian.npy  (+131 more)
models/: heatmaps_mean_std.json
models/fold_0/: best_model.pth  scaler.pkl
models/fold_1/: best_model.pth  scaler.pkl
models/fold_2/: best_model.pth  cat_maps.json  features.json  scaler.pkl
models/fold_3/: best_model.pth  features.json  scaler.pkl
models/fold_4/: best_model.pth  scaler.pkl
reports/: metrics_global.json  metrics_global_opt.json  metrics_new.json  metrics_new_opt.json  metrics_oof.json  oof.csv  oof_eval.csv  preds.csv  preds_new.csv
scripts/: ablations.py  eval_preds.py  infer.py  optuna_search.py  prepare_data.py  train.py
src/: config.py
src/data/: datasets.py  tabular.py  transforms.py
src/eval/: evaluate.py  plots.py
src/exporters/: onnx_export.py
src/features/: select.py
src/inference/: infer.py
src/interpretation/: gradcam.py  shap_utils.py
src/models/: cnn.py  fusion.py  mlp.py
src/train/: callbacks.py  engine.py  losses.py  metrics.py  trainer.py
src/utils/: io.py  logging.py  paths.py  seeding.py
(+12 files in other folders)
